@@ -1,5 +1,8 @@
 package com.jwinton.auth.application.exceptions;
 
+import com.google.protobuf.Api;
+import com.jwinton.auth.application.constants.ErrorCode;
+import com.jwinton.auth.presentation.dto.response.ApiResponse;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ControllerAdvice;
@@ -12,17 +15,35 @@ import java.util.stream.Collectors;
 public class GlobalExceptionHandler {
 
     @ExceptionHandler(value = RuntimeException.class)
-    ResponseEntity<String> handleException(RuntimeException e) {
-        return ResponseEntity.badRequest().body(e.getMessage());
+    ResponseEntity<ApiResponse> handleException(RuntimeException e) {
+        ApiResponse response = new ApiResponse();
+        response.setCode(ErrorCode.UNCATEGORIZED.getCode());
+        response.setMessage(ErrorCode.UNCATEGORIZED.getMessage());
+        response.setResult(e.getMessage());
+        return ResponseEntity.badRequest().body(response);
     }
 
-    @ExceptionHandler(MethodArgumentNotValidException.class)
-    public ResponseEntity<Object> handleMethodArgumentNotValid(MethodArgumentNotValidException ex) {
-        List<String> errors = ex.getBindingResult()
+    @ExceptionHandler(value = MethodArgumentNotValidException.class)
+    public ResponseEntity<ApiResponse> handleMethodArgumentNotValid(MethodArgumentNotValidException e) {
+        List<ErrorCode> errors = e.getBindingResult()
                 .getFieldErrors()
                 .stream()
-                .map(error -> error.getField() + ": " + error.getDefaultMessage())
-                .collect(Collectors.toList());
-        return ResponseEntity.badRequest().body(errors);
+                .map(error -> error.getDefaultMessage())
+                .map(error -> ErrorCode.valueOf(error))
+                .toList();
+
+        ApiResponse response = new ApiResponse();
+        response.setCode((int) errors.stream().map(error -> error.getCode()).count());
+        response.setMessage(errors.stream().map(error -> error.getMessage()).collect(Collectors.joining(",\n")));
+        return ResponseEntity.badRequest().body(response);
+    }
+
+
+    @ExceptionHandler(value = AppException.class)
+    public ResponseEntity<ApiResponse> handleAppException(AppException e) {
+        ApiResponse response = new ApiResponse();
+        response.setCode(e.getErrorCode().getCode());
+        response.setMessage(e.getErrorCode().getMessage());
+        return ResponseEntity.badRequest().body(response);
     }
 }
